--- a/app/pages/lobby/index.html
+++ b/app/pages/lobby/index.html
@@ -27,60 +27,8 @@
  
   <!-- Rooms available -->
   <div class="cards" id="roomGrid">
-    <a href="../room/index.html">
-      <div class="cards__card">
-        <span class="cards__card__topicRoom">
-          Semana JS Expert 4.0
-          <i class="fa fa-home"></i>
-        </span>
-        <p class="cards__card__title">
-        <p class="cards__card__title">
-          Bate-papo só para hackerzões
-        </p>
-        <div class="cards__card__info">
-          <div class="avatar">
-            <img src="./../../assets/avatars/erick.jpeg" alt="Erick Wendel">
-          </div>
-          <div class="cards__card__info__speakers">
-            <ul>
-              <li>Erick Wendel <span role="img" class="emoji">💬</span></li>
-              <li>Mariazinha <span role="img" class="emoji">💬</span></li>
-              <li>Zé da Silva <span role="img" class="emoji">💬</span></li>
-              <span class="cards__card__info__speakers__listeners">
-                200 <i class="fa fa-user"></i> / 3
-                <i class="fa fa-comment"></i>
-              </span>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </a>
-    <a href="#">
-      <div class="cards__card">
-        <span class="cards__card__topicRoom">
-          Semana JS Expert 4.0
-          <i class="fa fa-home"></i>
-        </span>
-        <p class="cards__card__title">
-          Como transformar gambiarras em negócios
-        </p>
-        <div class="cards__card__info">
-          <div class="avatar">
-            <img src="./../../assets/avatars/ze-silva.png" alt="Zé da Silva">
-          </div>
-          <div class="cards__card__info__speakers">
-            <ul>
-              <li>Zé da Silva <span role="img" class="emoji">💬</span></li>
-              <li>Ivete de Souza <span role="img" class="emoji">💬</span></li>
-              <span class="cards__card__info__speakers__listeners">
-                200 <i class="fa fa-user"></i> / 2
-                <i class="fa fa-comment"></i>
-              </span>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </a>
+   
+    
   </div>
 
   <!-- Start a room button -->
@@ -138,7 +86,7 @@
   <script src="https://use.fontawesome.com/8604f653a5.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.min.js" integrity="sha512-eVL5Lb9al9FzgR63gDs1MxcDS2wFu3loYAgjIH0+Hg38tCS8Ag62dwKyH+wzDb+QauDpEZjXbMn11blw8cbTJQ==" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/peerjs/1.3.2/peerjs.min.js" integrity="sha512-4wTQ8feow93K3qVGVXUGLULDB9eAULiG+xdbaQH8tYZlXxYv9ij+evblXD0EOqmGWT8NBTd1vQGsURvrQzmKeg==" crossorigin="anonymous"></script>
-  
+  <script type="module" src="./src/index.js"></script>
   <!-- Toggle Modal -->
   <script>
     function toggleModal(modal, action) {
