--- a/app/pages/room/index.html
+++ b/app/pages/room/index.html
@@ -70,7 +70,7 @@
       <div class="configs-room-buttons">
 
         <!-- Speaker Room -->
-        <button id="btnClipBoard" class="circle-btn-room">
+        <button id="btnClipBoard" class="circle-btn-room hidden">
           <i class="fa fa-clipboard"></i>
         </button>
 
@@ -85,7 +85,7 @@
         </button>
 
         <!-- Speaker Room -->
-        <button class="circle-btn-room" id="btnMicrophone">
+        <button class="circle-btn-room hidden" id="btnMicrophone">
           <i class="fa fa-microphone"></i>
         </button>
       </div>
